- Added a new option called 'memory_mode' to view the memory graph in two
  different modes: 'real' (being the default) and 'interpreted'.
  	(suggested by Łukasz "Cyber Killer" Korpalski, cyberkiller8 AT gmail.com)
- Added an advice in monitorix.conf(5) as a reminder that some default values
  are overwritten in the configuration files on certain systems.
  	(suggested by Sander Bos)
- Fixed a bad memory scaling in *BSD systems.
- Fixed in 'process.pm' to fully honour the option 'netstats_in_bps'.
- Fixed to force Monitorix to be started at the end of boot in systemd-based
  systems. This should fix a problem with 'traffacct.pm' and iptables.
- Fixed the missing declaration of 'allvalues' in 'gensens.pm' which prevented
  graphs generation if 'show_gaps' option was enabled.
- Fixed to correctly represent the values in text mode in 'ipmi.pm'.
- Fixed a missalignment of the MB & CPU temperatures values in 'lmsens.pm'.
- Fixed to limit the length of the device names in 'fs.pm'.
- Fixed a missing gap colouring in some zoomed graphs of 'system.pm'.


3.10.0 - 25-Sep-2017
====================
- Added a complete graph for IPMI sensors using the 'ipmitool' command.
  	(suggested by Frank Dijcks, fd AT fdsystems.nl)
- Added a complete graph for MongoDB. [#38]
- Added a back button in the upper-left corner to easily go to the main page
  in browsers with fullscreen mode. The button will appear only if the new
  option called 'enable_back_button' is enabled (disabled by default).
- Improved the 'system.pm' graph with more detailed information about processes
  (sleeping, waiting I/O, zombie, stopped, paging and running). It also
  includes two new graphs to show entropy and uptime.
- Changed the way how scales the memory graph in 'system.pm', now the units are
  in bytes, so the y-axis will scale accordingly.
- Changed to be more thickness the lines of Greylisting graph in 'mail.pm'.
- Changed the colors of the main graph in 'ftp.pm'.